修改窗口变小，内容溢出问题

--- a/Assessment/zhangshiru/Assessment/task1/css/task.css
+++ b/Assessment/zhangshiru/Assessment/task1/css/task.css
@@ -77,13 +77,18 @@ header {
   background-repeat: no-repeat;
 }
 
-.search_bar > div[class$="wrap"] {
+.search_bar div[class$="wrap"] {
   float: left;
+}
+
+.web {
+  width: 960px;
+  margin: 0 auto;
+  height: 100%;
 }
 
 .shop_wrap {
   height: 100%;
-  margin-left: 280px;
 }
 
 .shop_wrap img {
