--- a/Group3/chenfang/第二次作业/CSS/Assignment5.css
+++ b/Group3/chenfang/第二次作业/CSS/Assignment5.css
@@ -169,19 +169,21 @@ html{
     background-color:#cccccc;
 }
 
-
 .register h2{
     font-size:20px;
     padding-top:50px;
 }
 .register .pos{
-    margin-left:30%;
+    margin:0;
+    float:left;
 }
 .register .Text{
+    margin-top:20px;
     float:left;
     text-align:right;
 }
 .register .Input{
+    margin-top:20px;
     float:left;
     text-align:left;
 }
@@ -203,6 +205,7 @@ html{
 .register .submit{
     width:100%;
     height:50px;
+    margin-top:20px;
     padding:0;
     font-size:20px;
     color:#fff;
