--- a/Group1/duxue/11thweeks/style1.css
+++ b/Group1/duxue/11thweeks/style1.css
@@ -1,34 +1,35 @@
-body{
-	background:#eee;
-	border-color:#999;
-	width:920px;
-	height:420px;
+.all{
+	background-color:#eee;
+	width:940px;
+	height:660px;
 	margin:20px;
 	padding:0;
+	border:1px solid #999;
+}
+.team{
+	position:relative;
+	width:200px;
+	margin-left:20px;
+	margin-top:20px;
+	background-color:white; 
 }
 img{
 	width:80px;
 	height:80px;
 	display: block;
 	padding:20px;
-
-}
-.team{
-	width:200px;
-	padding:20px;
-	background-color:white; 
 }
 .name{
 	position:absolute;
     font-size:20px;
-    left:160px;
-    top:120px;
+    left:118px;
+    top:14px;
 }
 .introduce{
 	position:absolute;
     background-color:white;
-    left:276px;
-    top:20px;
+    left:274px;
+    top:40px;
 	background-color:white;
 	width:520px;
 }
@@ -36,10 +37,11 @@ img{
 	position:absolute;
 	background-color:white;
 	width:120px;
-	left:814px;
-	top:20px;
+	left:820px;
+	top:40px;
 }
 .logo p{
 	position:relative;
 	text-align:center;
+    margin:0;
 }
