--- a/Group1/dingzhenyue/任务一，二/ding_1.css
+++ b/Group1/dingzhenyue/任务一，二/ding_1.css
@@ -1,5 +1,5 @@
-/* 晚上和丁哥哥一起修仙 */
-body { width:1300px; font-size: 14px;}
+/* 和丁哥哥一起修仙 */
+body { width:1300px; font-size: 14px;padding:0 ;margin: 0;}
 img{ border:none; }
 li{ list-style:none; margin-top: 5px;}
 a { text-decoration:none;}
