--- a/Group4/Fengweimin/task125/css125.css
+++ b/Group4/Fengweimin/task125/css125.css
@@ -41,6 +41,6 @@ body{padding:0px;margin:0px auto;position: relative;background:#dedede;}
 .celan .move3{padding-left: 82px;}
 .celan .move4{padding-left:50px;}
 .celan .btn{width:500px;height:40px;border:none;
-	background:url(img/btn.jpg) no-repeat;cursor:pointer;}
+	background:url(img1/btn.jpg) no-repeat;cursor:pointer;}
 
 .footer{background-color: #000;color: #fff;text-align: center;height: 50px;padding-top: 25px;}
