--- a/Group3/chenzijin/第三次作业/css/task_1_7_1.css
+++ b/Group3/chenzijin/第三次作业/css/task_1_7_1.css
@@ -441,6 +441,9 @@ select option{
     margin-left:440px;
     padding-left:20px;
 }
+.Eight_l span a{
+    color:#959291;
+}
 .E_l_T{
     margin-top:34px;
 }
